synchronized with jcp-primary branch
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@9225 fcb5ba71-d80d-0410-8237-ba3920747fcc